# dungeon-master-ai

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint-cli2.jsonc  .yamllint.yml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bacon.toml  biome.json  deny.toml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  typos.toml  vite.config.ts  vitest.config.ts
.cargo/: config.toml  config.toml.example
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-bundle.yml  codeql.yml  link-check.yml  lint.yml  prebuild-python-sidecar.yml  prebuild-sidecars.yml  quality.yml  release.yml  security.yml  stale.yml  test.yml
crates/app-domain/: Cargo.toml
crates/app-domain/src/: dice.rs  lib.rs  rng.rs
crates/app-domain/src/combat/: ability_check.rs  action_economy.rs  attack.rs  combatant.rs  conditions.rs  damage.rs  healing.rs  initiative.rs  mod.rs  resolver.rs  result_events.rs  saving_throw.rs  turn_fsm.rs  types.rs  validator.rs
crates/app-domain/src/compendium/: loader.rs  mod.rs  types.rs
crates/app-domain/src/compendium/data/: equipment.yaml  feats.yaml  races_classes_backgrounds.yaml  spells_level_0_1.yaml  spells_level_2_a_k.yaml  spells_level_2_l_z.yaml  weapon_properties.yaml
crates/app-domain/src/local_llm/: manifest.rs  mod.rs
crates/app-domain/src/srd/: data.rs  embedder.rs  loader.rs  mod.rs  retriever.rs
crates/app-domain/srd/: classes.yaml  monsters.yaml  rules.yaml  spells.yaml
crates/app-domain/tests/: action_economy_tests.rs  attack_tests.rs  combatant_tests.rs  conditions_tests.rs  damage_tests.rs  dice_tests.rs  healing_tests.rs  initiative_tests.rs  resolver_tests.rs  saving_throw_tests.rs  srd_tests.rs  turn_fsm_tests.rs  validator_tests.rs
crates/app-llm/: Cargo.toml
crates/app-llm/src/: anthropic.rs  genai_common.rs  lib.rs  mistralrs_provider.rs  mock.rs  openai_compat.rs  provider.rs  retry.rs  sidecar_launcher.rs
crates/app-llm/tests/: anthropic_integration.rs  anthropic_tool_call_tests.rs  mock_provider.rs  mock_tool_call_tests.rs  openai_compat_provider.rs  provider_types_tests.rs  retry_test.rs
crates/app-server/: Cargo.toml
crates/app-server/migrations/: 0001_initial.sql  0002_m3_journal_npc_srd.sql  0003_m4_5_messages.sql  0004_m5_save_metadata.sql  0005_scenes.sql  0006_token_resistances.sql
crates/app-server/src/: config.rs  db.rs  error.rs  lib.rs  license.rs  main.rs  paths.rs  state.rs  telemetry.rs  testing.rs
crates/app-server/src/agent/: context_builder.rs  mod.rs  orchestrator.rs  tool_executor.rs  tools.rs
crates/app-server/src/hf/: client.rs  compat.rs  manifest.rs  mod.rs  types.rs
crates/app-server/src/image/: cache.rs  mod.rs  provider.rs  replicate.rs  retry.rs  stub.rs
crates/app-server/src/local_runtime/: health.rs  mod.rs  port.rs  process_launcher.rs  registry.rs  runtime.rs
crates/app-server/src/models/: download.rs  manager.rs  manifest.rs  mod.rs
crates/app-server/src/providers/: catalog.rs  mod.rs  registry.rs
crates/app-server/src/providers/discovery/: anthropic_curated.rs  capability_infer.rs  hf_hub_search.rs  mod.rs  openai_v1_models.rs  recommended.rs  replicate_search.rs  types.rs
crates/app-server/src/routes/: agent.rs  character_assist.rs  chat.rs  combat.rs  health.rs  hf.rs  image.rs  journal.rs  local_llm.rs  local_mode.rs  messages.rs  mod.rs  npc.rs  providers.rs  saves.rs  settings.rs  srd.rs  video.rs
crates/app-server/src/routes/settings/: mod.rs  v2.rs
crates/app-server/src/secrets/: migrate.rs  mod.rs  repo.rs  stronghold.rs
crates/app-server/src/video/: mod.rs  provider.rs  sidecar.rs
crates/app-server/tests/: agent_persists_test.rs  agent_tests.rs  character_assist.rs  character_assist_flag.rs  chat.rs  chat_dual_shape_test.rs  chat_persists_test.rs  chat_size_guard_test.rs  combat_tests.rs  db_tests.rs  health.rs  hf_license_check_smoke.rs  hf_search_smoke.rs  hf_wire_contract.rs  image_retry_test.rs  image_tests.rs  license_restricted_smoke.rs  local_llm_manifest.rs  local_mode_routes.rs  local_runtime_probe.rs  messages_endpoint_test.rs  providers_caps.rs  providers_catalog.rs  providers_discover.rs  saves_routes.rs  settings.rs  settings_v2.rs  srd_routes.rs  telemetry_smoke.rs
docs/: RELEASE.md  RELEASE_CHECKLIST.md
e2e/: character-creation-flow.spec.ts  chat.spec.ts  global-setup.ts  hf-search.spec.ts  local-mode-flow.spec.ts  onboarding.spec.ts  persistence.spec.ts  playwright.config.ts  settings.spec.ts  shell.spec.ts  smoke.spec.ts  vision-flow.spec.ts
e2e/fixtures/: tauri-mock.ts
prompts/: character_assist_chat_en.txt  character_assist_chat_ru.txt  character_assist_field_en.txt  character_assist_field_ru.txt  character_assist_flag_en.txt  character_assist_flag_ru.txt  character_assist_full_en.txt  character_assist_full_ru.txt  dm_system.en.txt  dm_system.ru.txt
scripts/: build_latest_json.ts  build_mistralrs.ps1  build_mistralrs.sh  cdp.ts  check-no-em-dash.sh  dev-all.ts  download_mistralrs.ps1  download_mistralrs.sh  gates.sh  install-pre-commit.sh  setup-local.ts  tauri-cdp-e2e.ts  tauri-cdp-play.ts
sidecar/: .gitignore  README.md  app.py  build_spec.spec  pipeline.py  pyproject.toml  requirements.txt
sidecar/backends/: __init__.py  _capabilities.py  ltx_video.py  nunchaku_flux.py  protocol.py  sdxl_lightning.py  sdxl_turbo.py  z_image_turbo.py
sidecar/scripts/: build.ps1  build.sh
sidecar/tests/: conftest.py  test_app.py  test_capabilities.py  test_ltx_video_smoke.py  test_nunchaku_flux_smoke.py  test_pipeline_dispatcher.py  test_sdxl_lightning_smoke.py  test_sdxl_turbo_smoke.py  test_z_image_turbo_smoke.py
src/: App.module.css  App.tsx  i18n.d.ts  i18n.ts  main.tsx  setupTests.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sidecar_launcher.rs
src/__tests__/: locales-e10.test.ts  no-anthropic-provider.test.ts  (+1 more)
(+335 files in other folders)
