[workspace]
members = [
    "crates/app-domain",
    "crates/app-llm",
    "crates/app-server",
    "src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Daniil Kiselyov"]
license = "MIT OR Apache-2.0"
rust-version = "1.81"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
genai = "=0.6.0-beta.18"
backon = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "macros", "migrate", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.dev]
debug = "line-tables-only"
incremental = true

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
