[project]
name = "dmai-image-sidecar"
version = "0.1.0"
description = "Local image/video generation sidecar for dungeon-master-ai"
# cp312 only: the torch cu128 and nunchaku wheels this sidecar targets ship
# for CPython 3.12. 3.13/3.14 have no matching nunchaku/torch+cu128 wheels yet.
requires-python = ">=3.12,<3.13"

dependencies = [
    # Diffusion stack. diffusers is pinned to git main (see [tool.uv.sources])
    # until ZImagePipeline / ZImageTransformer2DModel ship in a tagged release.
    "diffusers",
    "transformers>=4.51,<5.0",
    "peft>=0.17",
    "accelerate>=1.0",
    "safetensors>=0.4.5",
    "sentencepiece==0.2.1",
    "huggingface-hub>=0.27",
    # Torch + vision come from the CUDA 12.8 index (see [tool.uv.sources]); the
    # wheel bundles its own cudart so the host CUDA toolkit version is irrelevant.
    "torch==2.8.0",
    "torchvision==0.23.0",
    # HTTP service.
    "fastapi==0.137.1",
    "uvicorn[standard]==0.47.0",
    "pydantic==2.13.4",
    "pillow==10.4.0",
    # Video export (LTX-Video MP4 via diffusers.utils.export_to_video).
    "opencv-python==4.13.0.92",
    "imageio==2.37.3",
    "imageio-ffmpeg==0.6.0",
]

[dependency-groups]
# `uv sync` installs these by default; `uv sync --no-dev` skips them for the
# slimmer PyInstaller bundle build.
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.9",
    "pyinstaller==6.10",
]

[tool.uv]
# This is an application, not an installable library: do not try to build/install
# the sidecar itself, only resolve and install its dependencies.
package = false

[tool.uv.sources]
# diffusers main carries the Z-Image-Turbo pipeline classes (unreleased 0.36+).
diffusers = { git = "https://github.com/huggingface/diffusers.git", branch = "main" }
# Pull torch + torchvision from the CUDA 12.8 wheel index, not PyPI (which is
# CPU-only on Windows).
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# nunchaku is intentionally absent: PyPI 'nunchaku' is an unrelated Bayesian
# sampler. Install the real SVDQuant wheel after `uv sync` (cuda extra), e.g.:
#   uv pip install \
#     "https://github.com/nunchaku-tech/nunchaku/releases/download/v1.2.1/nunchaku-1.2.1+cu12.8torch2.8-cp312-cp312-win_amd64.whl"
# Only needed for the `quality` / `quality-oss` backends; `balanced`
# (SDXL-Lightning) works without it. See README.md.

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I", "UP", "B"]

[tool.pytest.ini_options]
markers = [
    "gpu: requires CUDA and downloaded weights; skipped unless RUN_GPU_TESTS=1",
]
