[package]
name = "app-server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "app-server"
path = "src/main.rs"

[dependencies]
app-llm = { path = "../app-llm" }
app-domain = { path = "../app-domain" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
fastembed = { version = "4", default-features = false, features = ["ort-download-binaries", "hf-hub-rustls-tls"] }
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
app-server = { path = ".", features = ["test-support"] }
wiremock = "0.6"
tempfile = "3"

[features]
test-support = []
